--- a/main.css
+++ b/main.css
@@ -184,3 +184,62 @@ svg#play {
 	  box-shadow: 0px 0px 10px rgba(255,255,100,1);
 	  text-shadow: 0px 0px 10px rgba(255,255,100,1);
   }
+
+
+
+  #player {
+	
+	position: absolute;
+	left: 50%;
+	
+	
+	top: 200px;
+	
+	i {
+		position: absolute;
+		margin-top: -6px;
+		color: #666;
+	}
+	
+	i.fa-volume-down {
+		margin-left: -8px;
+	}
+	
+	i.fa-volume-up {
+		margin-right: -8px;
+		right: 0;
+	}
+}
+
+#volume {
+	position: absolute;
+	left: -125px;
+	margin: 0 auto;
+	height: 5px;
+	width: 300px;
+	background: #555;
+	border-radius: 15px;
+	
+}
+
+.ui-slider-range-min {
+    height: 5px;
+    width: 300px;
+    position: absolute;
+    background: $primary-color;
+    border: none;
+    border-radius: 10px;
+  outline: none;
+}
+
+#volume .ui-slider-handle {
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    background: #222;
+    position: absolute;
+    margin-left: -8px;
+    margin-top: -8px;
+    cursor: pointer;
+    outline: none;
+}
