--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,8 @@ a, button, input, select {
 
 
 
+
+
 svg#play {
 	width:200px;
 	margin: 0;
@@ -242,4 +244,78 @@ svg#play {
     margin-top: -8px;
     cursor: pointer;
     outline: none;
+}
+
+
+ /* made this so i could visually center the shapes */
+
+ #backgroundplaceholder{
+	/* background-color: black;  */
+  background-color: white; 
+  padding: 12em;
+  /* margin-left: 30%; */
+  width:100%;
+  height:100%;
+}
+/* the button's base size, shape, appearance */
+#playPauseButton{
+	position: absolute;
+	left: 50%;
+	top: 80%;
+/* position: relative; */
+/* the button's background color */
+background: #fff; 
+border: none;
+outline:none;
+height: 5em;
+width: 5em;
+font-size: 2em; 
+box-shadow: 0px 2px 5px rgba(0, 0, 0, .3);
+cursor:pointer;
+ /* the button's a circle */ 
+  -moz-border-radius: 5em;
+  -webkit-border-radius: 5em;
+  border-radius: 5em;
+
+}
+
+#playPauseButton:focus{
+outline:none;
+}
+
+/* the button's top layer: size, shape, appearance */
+#playPauseButton:before {
+content: "";
+position: absolute;
+top: 1.5em;
+ /* for visual centering */
+left: 1.67em;
+height: 0;
+border-style: solid;
+border-width: 1em 0 1em 2em;
+/* create shape with color */
+border-color: transparent transparent transparent #e52d27; 
+transition: .218s ease;
+}
+
+#playPauseButton:hover:before {
+height: 2em;
+border-width: 0 0 0 2em;
+}
+
+/* the button's mouseover/click/hover layer: size, shape, appearance */
+#playPauseButton:after {
+content: "";
+position: absolute;
+background: inherit;
+width: 0;
+height: 2em;
+top: 1.5em;
+ /* for visual centering */
+left: 2.42em;
+transition: .218s ease;
+}
+
+#playPauseButton:hover:after {
+width: .5em;
 }
