--- a/css/main.css
+++ b/css/main.css
@@ -128,131 +128,13 @@ svg#play {
 
 
 
-  .ldBar {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	width: 500px;
-	height: auto;
-	text-align: center;
-	transform: translate(-50%,-50%);
-  }
-  
-  .ldBar.label-center > .ldBar-label {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-	text-shadow: 0 0 3px #fff;
-  }
-  
-  .ldBar-label:after {
-	content: "%";
-	display: inline;
-  }
-  
-  .ldBar.no-percent .ldBar-label:after {
-	content: "";
-  }
-  
-  .round-button {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	width: 500px;
-	height: auto;
-	text-align: center;
-	transform: translate(-50%,-50%);
-	  box-sizing: border-box;
-	  display:block;
-	  width:80px;
-	  height:80px;
-	  padding-top: 14px;
-	  padding-left: 8px;
-	  line-height: 20px;
-	  border: 6px solid #fff;
-	  border-radius: 50%;
-	  color:#f5f5f5;
-	  text-align:center;
-	  text-decoration:none;
-	  background-color: rgba(0,0,0,0.5);
-	  font-size:20px;
-	  font-weight:bold;
-	  transition: all 0.3s ease;
-  }
-  .round-button:hover {
-	  background-color: rgba(0,0,0,0.8);
-	  box-shadow: 0px 0px 10px rgba(255,255,100,1);
-	  text-shadow: 0px 0px 10px rgba(255,255,100,1);
-  }
 
 
-
-  #player {
-	
-	position: absolute;
-	left: 50%;
-	
-	
-	top: 200px;
-	
-	i {
-		position: absolute;
-		margin-top: -6px;
-		color: #666;
-	}
-	
-	i.fa-volume-down {
-		margin-left: -8px;
-	}
-	
-	i.fa-volume-up {
-		margin-right: -8px;
-		right: 0;
-	}
-}
-
-#volume {
-	position: absolute;
-	left: -125px;
-	margin: 0 auto;
-	height: 5px;
-	width: 300px;
-	background: #555;
-	border-radius: 15px;
-	
-}
-
-.ui-slider-range-min {
-    height: 5px;
-    width: 300px;
-    position: absolute;
-    background: $primary-color;
-    border: none;
-    border-radius: 10px;
-  outline: none;
-}
-
-#volume .ui-slider-handle {
-    width: 20px;
-    height: 20px;
-    border-radius: 20px;
-    background: #222;
-    position: absolute;
-    margin-left: -8px;
-    margin-top: -8px;
-    cursor: pointer;
-    outline: none;
-}
-
-
- /* made this so i could visually center the shapes */
 
  #backgroundplaceholder{
 	/* background-color: black;  */
   background-color: white; 
-  padding: 12em;
+  /* padding: 12em; */
   /* margin-left: 30%; */
   width:100%;
   height:100%;
@@ -262,6 +144,9 @@ svg#play {
 	position: absolute;
 	left: 50%;
 	top: 80%;
+	transform: translate(-50%, -50%);
+	transform-origin: 50% 50%;
+	
 /* position: relative; */
 /* the button's background color */
 background: #fff; 
